# switch_interface

./: .gitignore  README.md  at_switch_sim.py  audio_io.py  calibration.py  detection.py  kb_gui.py  kb_layout.py  kb_layout_io.py  key_types.py  main.py  pc_control.py  predictive.py  prototype_scope.txt  pyproject.toml  scan_engine.py  scanner.py
.github/workflows/: ci.yml
layouts/: basic_test.json  default.json  pred_test.json  predictive_test.json
myproject/: __main__.py  calibration.py  detection.py  kb_gui.py  kb_layout.py  kb_layout_io.py  pc_control.py  predictive.py  scan_engine.py
myproject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
myproject/audio/: wasapi.py
myproject/resources/layouts/: basic_test.json  media_controls.json  pred_test.json
switch_interface/: __main__.py  auto_calibration.py  autocal.py  calibration.py  detection.py  interfaces.py  kb_gui.py  kb_layout.py  kb_layout_io.py  key_types.py  launcher.py  logging.py  modifier_state.py  optimal_calibration.py  pc_control.py  predictive.py  pyinstaller.spec
switch_interface.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
switch_interface/audio/: stream.py
switch_interface/audio/backends/: alsa.py  wasapi_backend.py
switch_interface/resources/layouts/: alphabet_symbols.json  new_test.json  numeric_pad.json
switch_interface/scripts/: check_calibration.py  live_smoke,py  live_smoke.py
tests/: conftest.py  test_auto_calibration.py  test_baseline.py  test_calibration_persistence.py  test_calibration_ui.py  test_detection.py  test_diagnostics.py  test_layout_loader.py  test_optimal_calibration.py  test_pc_control.py  test_predictive.py  test_scan_engine.py  test_wasapi.py
tests/data/: ten_presses.npy
