[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "switch_interface"
version = "0.1.0"
authors = [{name = "test", email = "test@example.com"}]
description = "Switch interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pynput",
    "wordfreq",
]

[project.scripts]
switch-interface = "switch_interface.__main__:main"
switch-interface-gui = "switch_interface.launcher:main"

[tool.setuptools.package-data]
switch_interface = ["resources/**/*.json"]
