# pyproject.toml  – v0.2.0
[build-system]
requires      = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name            = "switch-interface"
version         = "0.2.0"
description     = "Switch-accessible on-screen keyboard with audio-based single-switch scanning."
readme          = "README.md"
requires-python = ">=3.11"
license         = {text = "MIT"}
authors         = [{name = "Your Name", email = "you@example.com"}]
keywords        = ["assistive-technology", "switch-access", "scanning", "AAC"]

# ---------- Runtime dependencies ----------
dependencies = [
  # audio & signal processing
  "sounddevice>=0.4.6",
  "numpy>=1.26",
  # input / OS integration
  "pynput>=1.7.7",
  # predictive text
  "wordfreq>=3.0",
]

# ---------- Optional groups ----------
[project.optional-dependencies]
dev = [
  # testing
  "pytest>=8.0",
  "pytest-cov>=5.0",
  # lint / type-check / format
  "flake8>=7.0",
  "mypy>=1.10",
  "black>=24.4",
  "isort>=5.13",
]

# ---------- Console & GUI entry points ----------
[project.scripts]
switch-interface      = "switch_interface.__main__:cli"
switch-interface-gui  = "switch_interface.__main__:gui"

# ---------- Pytest config (keeps repo root clean) ----------
[tool.pytest.ini_options]
addopts   = "-ra -q --cov=switch_interface"
testpaths = ["tests"]

# ---------- Black & isort harmonious defaults ----------
[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"

# ---------- Mypy (relaxed until strict mode passes) ----------
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
