# pyproject.toml  – v0.2.0
[build-system]
requires      = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name            = "switch-interface"
version         = "0.2.0"
description     = "Switch-accessible on-screen keyboard with audio-based single-switch scanning."
readme          = "README.md"
requires-python = ">=3.11"
license         = {text = "MIT"}
authors         = [{name = "Your Name", email = "you@example.com"}]
keywords        = ["assistive-technology", "switch-access", "scanning", "AAC"]

# ---------- Runtime dependencies ----------
dependencies = [
  # audio & signal processing
  "sounddevice>=0.5",
  "numpy>=2.0",
  # input / OS integration
  "pynput>=1.8",
  # predictive text
  "wordfreq>=3.1",
]

# ---------- Optional groups ----------
[project.optional-dependencies]
dev = [
  # testing
  "pytest>=8.4",
  "pytest-cov>=6.2",
  # lint / type-check / format
  "flake8>=7.3",
  "mypy>=1.16",
  "black>=25.1",
  "isort>=6.0",
  "ruff>=0.4",
  "scipy>=1.11",
]

# ---------- Console & GUI entry points ----------
[project.scripts]
switch-interface      = "switch_interface.__main__:cli"
switch-interface-gui  = "switch_interface.__main__:gui"

# ---------- Pytest config (keeps repo root clean) ----------
[tool.pytest.ini_options]
addopts   = "-ra -q --cov=switch_interface"
testpaths = ["tests"]

# ---------- Black & isort harmonious defaults ----------
[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"

# ---------- Mypy (relaxed until strict mode passes) ----------
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E401", "E402", "E501", "E731", "F401", "F841"]
